# TaskPilotAI

./: .env.example  .gitignore  AUTHENTICATION_READY.txt  AUTH_SETUP.md  AUTONOMOUS_AGENT_FINAL_REPORT.md  BLUEPRINT_SUMMARY.md  BLUEPRINT_USAGE_GUIDE.md  BLUEPRINT_VERIFICATION.md  CHATBOT_DASHBOARD_INTEGRATION.md  CHATKIT_DEPLOYMENT_GUIDE.md  CHATKIT_E2E_TESTING.md  CHATKIT_ENDPOINTS_EXPLAINED.md  CHATKIT_IMPLEMENTATION_COMPLETE.md  CHATKIT_IMPLEMENTATION_GUIDE.md  CHATKIT_IMPLEMENTATION_SUMMARY.md  CHATKIT_QUICK_REFERENCE.md  CHATKIT_QUICK_START.md  CHATKIT_READY.md  CHATKIT_RENDER_SETUP.md  CHATKIT_SYNC_FIX.md  CHATKIT_TESTING_GUIDE.md  CHATKIT_VERIFICATION.md  CLAUDE.md  CUSTOM_CHATBOT_REVIEW.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DESIGN_RECOMMENDATIONS.md  FINAL_FIX_SUMMARY.md  FINAL_STATUS.md  FULL_COMPARISON_ANALYSIS.md  HYDRATION_FIX_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_TESTING_CHECKLIST.md  LOCAL_SETUP.md  LOCAL_TESTING_GUIDE.md  MODERN_UI_UX_PLAN.md  NEON_SETUP_GUIDE.md  PATH_B_VS_SPEC_COMPARISON.md  PHASE-2-IMPLEMENTATION-GUIDE.md  (+31 more)
.claude/agents/: AGENT-INTEGRATION.md  AGENT-STATUS.txt  AUTONOMOUS-AGENT-README.md  README.md  agent-skills.md  autonomous-agent-config.yaml  autonomous_agent.py  code-generator.md  code_generator.py  documentation-generator.md  documentation_generator.py  orchestrator-status.json  orchestrator.py  render-configurator.md  spec-generator.md  spec_generator.py  test-generator.md  test_generator.py
.claude/commands/: blueprint-generate.md
.spec-kit/: config.yaml
.specify/memory/: constitution.md
backend/: .env.example  API_DOCS.md  CLAUDE.md  __init__.py  alembic.ini  cache.py  chatkit_assistant_config.json  config.py  conftest.py  db.py  init_db.py  main.py  models.py  performance.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py  seed_demo_users.py  setup_chatkit_assistant.py  setup_db.sh  taskpilot.db  test_integration.py
backend/agents/: conversation_context.py  official_openai_agent.py  openai_agent_sdk.py  task_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/mcp/: __init__.py  server.py
backend/mcp/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  find_task_by_name.py  list_tasks.py  update_task.py
backend/middleware/: auth.py
backend/routes/: __init__.py  advanced.py  auth.py  chat.py  chatkit.py  tasks.py
backend/task_agents/: __init__.py  official_openai_agent.py  task_agent.py
backend/tests/: conftest.py  test_auth.py  test_chat_endpoint.py  test_chatkit.py  test_chatkit_user_isolation.py  test_conversation_context.py  test_delete_update_tasks.py  test_integration.py  test_list_complete_tasks.py  test_mcp_tools.py  test_models.py
docs/: REFERENCE-MCP-PROTOCOL.md  REFERENCE-OPENAI-AGENTS-SDK.md  REFERENCE-OPENAI-CHATKIT.md
frontend/: .env.development  .env.example  .env.production  CLAUDE.md  ENVIRONMENT_SETUP.md  jest.config.js  jest.config.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/__tests__/: chat-client.test.ts  chatkit-persistence.test.ts  chatkit-tool-display.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ProtectedRoute.tsx
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/lib/: COMPONENT_KIT.md  api.ts  auth-client.ts  chat-client.ts  chatkit-config.ts  colors.ts  config.ts  typography.ts  useAuth.ts  useToast.ts  utils.ts
frontend/tests/: setup.ts
frontend/types/: index.ts
specs/: data-model.md  data-models.md  overview.md  phase-2-plan.md  phase-2-tasks.md  phase-3-plan.md  phase-3-tasks.md  phase-4-kubernetes-deployment.md  phase-4-overview.md  plan.md  quickstart.md  tasks.md
specs/005-chatkit-integration/: PRODUCTION_DEPLOYMENT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-chatkit-custom-integration/: plan.md  spec.md  tasks.md
src/: __init__.py  commands.py  main.py  models.py  storage.py  tui.py
tests/: __init__.py  conftest.py  test_add_task.py  test_delete_task.py  test_mark_complete.py  test_update_task.py  test_view_tasks.py
(+79 files in other folders)
